--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.3.1"
+    "mongoose": "^7.3.1",
+    "path": "^0.12.7",
+    "serialport": "^11.0.0",
+    "twilio": "^4.13.0"
   }
 }
